--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 			<div class="row">
 				<div class="six columns">
 					<label for="anno">Anno di corso</label>
-					<input onkeyup="generateURL()" type="number" id="anno">
+					<input onchange="generateURL()" type="number" id="anno">
 				</div>
 				<div class="six columns">
 					<label for="reminder_delay">Avviso (minuti)</label>
-					<input type="number" id="reminder_delay" onkeyup="generateURL()">
+					<input type="number" id="reminder_delay" onchange="generateURL()">
 				</div>
 			</div>
 		</form>
