--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 		}
 	</script>
 	<style>
+		@media (prefers-color-scheme: dark) {
+			body{
+				background-color: #202020;
+				color: #fff;
+			}
+			input[type=email], input[type=number], input[type=password], input[type=search], input[type=tel], input[type=text], input[type=url], select, textarea{
+				background-color: #616264;
+			}
+			a {
+				color: #4A6488;
+			}
+		}
 		.u-text-center {
 			text-align: center !important; }
 	</style>
