--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 		</ul>
 		<h3>iOS e macOS</h3>
 		<ul>
-			<li><a href="https://support.apple.com/en-us/HT202361">Aggiungere il calendario ad iCloud</a></li>
+			<li><a href="https://support.apple.com/it-it/HT202361">Aggiungere il calendario ad iCloud</a></li>
 			<li><a href="https://support.apple.com/it-it/guide/ipad/ipad1b02bf5b/ipados#iPadf36f162d">Aggiungere il calendario a un dispositivo iOS</a></li>
+			<li><a href="https://support.apple.com/it-it/guide/calendar/icl1022/mac">Aggiungere il calendario a macOS</a></li>
 		</ul>
 		<hr>
 		<footer class="u-text-center">
