Correzione a dark mode

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			}
 			input[type=email], input[type=number], input[type=password], input[type=search], input[type=tel], input[type=text], input[type=url], select, textarea{
 				background-color: #616264;
+				color: #eee;
 			}
 			a {
 				color: #4A6488;
